tests/unclosed_brace.out
STDOUT:

STDERR:
error: unclosed brace '{'
  ┌─ tests/unclosed_brace.c:2:12
  │
2 │ int main() {
  │            ^
  │            │
  │            expected closing brace '{'
  │            opening delimiter here

Error: Parsing failed
